--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@uiw/react-md-editor": "^4.0.8",
+    "bcrypt": "^6.0.0",
+    "dompurify": "^3.2.6",
+    "dotenv": "^17.2.1",
+    "jose": "^6.0.12",
+    "marked": "^16.1.1",
+    "mongoose": "^8.16.5",
+    "next": "15.4.4",
+    "rate-limiter-flexible": "^7.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "react-icons": "^5.5.0",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
